--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -5,141 +5,154 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Geschiedenis | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #ffb4b4;
-            --secondary-color: #477a75;
-            --background-light: #FFFFFF;
-            --background-dark: #000000;
-            --text-light: #000000;
-            --text-dark: #ffffff;
-            --menu-footer-light: #444444;
-            --menu-footer-dark: #333333;
-            --accent-dark-hover: #018786;
-        }
+<style>
+    :root {
+        --primary-color: #ffb4b4;
+        --secondary-color: #477a75;
+        --background-light: #FFFFFF;
+        --background-dark: #000000;
+        --text-light: #000000;
+        --text-dark: #ffffff;
+        --menu-footer-light: #444444;
+        --menu-footer-dark: #333333;
+        --accent-dark-hover: #018786;
+    }
 
-        body {
-            font-family: "Roboto", sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: var(--background-light);
-            color: var(--text-light);
-            transition: background-color 0.3s, color 0.3s;
-        }
+    body {
+        font-family: "Roboto", sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: var(--background-light);
+        color: var(--text-light);
+        transition: background-color 0.3s, color 0.3s;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        overflow-x: hidden; /* Ensure no horizontal overflow */
+    }
 
-        header {
-            background-color: var(--menu-footer-light);
-            color: var(--text-dark);
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 0;
-        }
+    header {
+        background-color: var(--menu-footer-light);
+        color: var(--text-dark);
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 0;
+        width: 100%; /* Ensure header takes full width */
+        box-sizing: border-box; /* Include padding and border in element's width and height */
+    }
 
-        .header-title {
-            flex: 1;
-        }
+    .header-title {
+        flex: 1;
+    }
 
-        .menu {
-            flex: 2;
-            display: flex;
-            justify-content: center;
-        }
+    .menu {
+        flex: 2;
+        display: flex;
+        justify-content: center;
+    }
 
-        .menu nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
+    .menu nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+    }
 
-        .menu nav ul li {
-            margin-right: 20px;
-        }
+    .menu nav ul li {
+        margin-right: 20px;
+    }
 
-        .menu nav ul li a {
-            color: var(--text-dark);
-            text-decoration: none;
-            transition: transform 0.3s, background-color 0.3s;
-            padding: 10px 20px;
-            border-radius: 5px;
-            background-color: #666666;
-            display: inline-block;
-        }
+    .menu nav ul li a {
+        color: var(--text-dark);
+        text-decoration: none;
+        transition: transform 0.3s, background-color 0.3s;
+        padding: 10px 20px;
+        border-radius: 5px;
+        background-color: #666666;
+        display: inline-block;
+    }
 
-        .menu nav ul li a:hover {
-            background-color: #888888;
-            transform: translateY(-2px);
-        }
+    .menu nav ul li a:hover {
+        background-color: #888888;
+        transform: translateY(-2px);
+    }
 
-        #theme-toggle {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 24px;
-            transition: transform 0.3s;
-        }
+    #theme-toggle {
+        background: none;
+        border: none;
+        cursor: pointer;
+        font-size: 24px;
+        transition: transform 0.3s;
+    }
 
-        #theme-toggle .material-icons {
-            transition: transform 0.3s, color 0.3s;
-        }
+    #theme-toggle .material-icons {
+        transition: transform 0.3s, color 0.3s;
+    }
 
-        main {
-            padding: 20px;
-        }
+    main {
+        flex: 1;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        box-sizing: border-box; /* Include padding and border in element's width and height */
+        width: 100%; /* Ensure main takes full width */
+    }
 
-        .page-content {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: var(--primary-color);
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    .page-content {
+        max-width: 800px;
+        width: 100%; /* Ensure page content takes full width within its max-width */
+        margin: 0 auto;
+        background-color: var(--primary-color);
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box; /* Include padding and border in element's width and height */
+    }
 
-        .footer {
-            background-color: var(--menu-footer-light);
-            color: var(--text-dark);
-            padding: 20px;
-            text-align: center;
-            border-radius: 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
-        }
+    .footer {
+        background-color: var(--menu-footer-light);
+        color: var(--text-dark);
+        padding: 20px;
+        text-align: center;
+        border-radius: 0;
+        width: 100%; /* Ensure footer takes full width */
+        box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box; /* Include padding and border in element's width and height */
+    }
 
-        body.dark-mode {
-            background-color: var(--background-dark);
-            color: var(--text-dark);
-        }
+    body.dark-mode {
+        background-color: var(--background-dark);
+        color: var(--text-dark);
+    }
 
-        body.dark-mode header, body.dark-mode .footer {
-            background-color: var(--menu-footer-dark);
-            color: var(--text-dark);
-        }
+    body.dark-mode header, body.dark-mode .footer {
+        background-color: var(--menu-footer-dark);
+        color: var(--text-dark);
+    }
 
-        body.dark-mode .menu nav ul li a {
-            background-color: var(--accent-dark-hover);
-            color: var(--text-dark);
-        }
+    body.dark-mode .menu nav ul li a {
+        background-color: var(--accent-dark-hover);
+        color: var(--text-dark);
+    }
 
-        body.dark-mode .menu nav ul li a:hover {
-            background-color: #ff8c56;
-        }
+    body.dark-mode .menu nav ul li a:hover {
+        background-color: #ff8c56;
+    }
 
-        body.dark-mode .page-content {
-            background-color: var(--secondary-color);
-            color: var(--text-dark);
-        }
+    body.dark-mode .page-content {
+        background-color: var(--secondary-color);
+        color: var (--text-dark);
+    }
 
-        body.dark-mode #theme-toggle .material-icons {
-            color: var(--text-dark);
-            transform: rotate(360deg);
-        }
-    </style>
+    body.dark-mode #theme-toggle .material-icons {
+        color: var(--text-dark);
+        transform: rotate(360deg);
+    }
+</style>
+
 </head>
 <body>
     <header>
