--- a/onderzoek.html
+++ b/onderzoek.html
@@ -5,154 +5,186 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onderzoek | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<style>
-    :root {
-        --primary-color: #ffb4b4;
-        --secondary-color: #477a75;
-        --background-light: #FFFFFF;
-        --background-dark: #000000;
-        --text-light: #000000;
-        --text-dark: #ffffff;
-        --menu-footer-light: #444444;
-        --menu-footer-dark: #333333;
-        --accent-dark-hover: #018786;
-    }
+    <style>
+        :root {
+            --primary-color: #ffb4b4;
+            --secondary-color: #477a75;
+            --background-light: #FFFFFF;
+            --background-dark: #000000;
+            --text-light: #000000;
+            --text-dark: #ffffff;
+            --menu-footer-light: #444444;
+            --menu-footer-dark: #333333;
+            --accent-dark-hover: #018786;
+        }
 
-    body {
-        font-family: "Roboto", sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: var(--background-light);
-        color: var(--text-light);
-        transition: background-color 0.3s, color 0.3s;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        overflow-x: hidden; /* Ensure no horizontal overflow */
-    }
+        body {
+            font-family: "Roboto", sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: var(--background-light);
+            color: var(--text-light);
+            transition: background-color 0.3s, color 0.3s;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            overflow-x: hidden; /* Ensure no horizontal overflow */
+        }
 
-    header {
-        background-color: var(--menu-footer-light);
-        color: var(--text-dark);
-        padding: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        border-radius: 0;
-        width: 100%; /* Ensure header takes full width */
-        box-sizing: border-box; /* Include padding and border in element's width and height */
-    }
+        header {
+            background-color: var(--menu-footer-light);
+            color: var(--text-dark);
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 0;
+            width: 100%; /* Ensure header takes full width */
+            box-sizing: border-box; /* Include padding and border in element's width and height */
+        }
 
-    .header-title {
-        flex: 1;
-    }
+        .header-title {
+            flex: 1;
+        }
 
-    .menu {
-        flex: 2;
-        display: flex;
-        justify-content: center;
-    }
+        .menu {
+            flex: 2;
+            display: flex;
+            justify-content: center;
+        }
 
-    .menu nav ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-    }
+        .menu nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
 
-    .menu nav ul li {
-        margin-right: 20px;
-    }
+        .menu nav ul li {
+            margin-right: 20px;
+        }
 
-    .menu nav ul li a {
-        color: var(--text-dark);
-        text-decoration: none;
-        transition: transform 0.3s, background-color 0.3s;
-        padding: 10px 20px;
-        border-radius: 5px;
-        background-color: #666666;
-        display: inline-block;
-    }
+        .menu nav ul li a {
+            color: var(--text-dark);
+            text-decoration: none;
+            transition: transform 0.3s, background-color 0.3s;
+            padding: 10px 20px;
+            border-radius: 5px;
+            background-color: #666666;
+            display: inline-block;
+        }
 
-    .menu nav ul li a:hover {
-        background-color: #888888;
-        transform: translateY(-2px);
-    }
+        .menu nav ul li a:hover {
+            background-color: #888888;
+            transform: translateY(-2px);
+        }
 
-    #theme-toggle {
-        background: none;
-        border: none;
-        cursor: pointer;
-        font-size: 24px;
-        transition: transform 0.3s;
-    }
+        #theme-toggle {
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 24px;
+            transition: transform 0.3s;
+        }
 
-    #theme-toggle .material-icons {
-        transition: transform 0.3s, color 0.3s;
-    }
+        #theme-toggle .material-icons {
+            transition: transform 0.3s, color 0.3s;
+        }
 
-    main {
-        flex: 1;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        box-sizing: border-box; /* Include padding and border in element's width and height */
-        width: 100%; /* Ensure main takes full width */
-    }
+        main {
+            flex: 1;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+            box-sizing: border-box; /* Include padding and border in element's width and height */
+            width: 100%; /* Ensure main takes full width */
+        }
 
-    .page-content {
-        max-width: 800px;
-        width: 100%; /* Ensure page content takes full width within its max-width */
-        margin: 0 auto;
-        background-color: var(--primary-color);
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        box-sizing: border-box; /* Include padding and border in element's width and height */
-    }
+        .page-content {
+            max-width: 800px;
+            width: 100%; /* Ensure page content takes full width within its max-width */
+            margin: 0 auto;
+            background-color: var(--primary-color);
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box; /* Include padding and border in element's width and height */
+        }
 
-    .footer {
-        background-color: var(--menu-footer-light);
-        color: var(--text-dark);
-        padding: 20px;
-        text-align: center;
-        border-radius: 0;
-        width: 100%; /* Ensure footer takes full width */
-        box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
-        box-sizing: border-box; /* Include padding and border in element's width and height */
-    }
+        .footer {
+            background-color: var(--menu-footer-light);
+            color: var(--text-dark);
+            padding: 20px;
+            text-align: center;
+            border-radius: 0;
+            width: 100%; /* Ensure footer takes full width */
+            box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box; /* Include padding and border in element's width and height */
+        }
 
-    body.dark-mode {
-        background-color: var(--background-dark);
-        color: var(--text-dark);
-    }
+        .doc-viewer {
+            width: 100%;
+            height: 600px;
+            border: none;
+            margin-bottom: 20px;
+        }
 
-    body.dark-mode header, body.dark-mode .footer {
-        background-color: var(--menu-footer-dark);
-        color: var(--text-dark);
-    }
+        .controls {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-    body.dark-mode .menu nav ul li a {
-        background-color: var(--accent-dark-hover);
-        color: var(--text-dark);
-    }
+        .controls button {
+            background-color: var(--secondary-color);
+            color: var(--text-dark);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            transition: background-color 0.3s;
+        }
 
-    body.dark-mode .menu nav ul li a:hover {
-        background-color: #ff8c56;
-    }
+        .controls button:hover {
+            background-color: var(--accent-dark-hover);
+        }
 
-    body.dark-mode .page-content {
-        background-color: var(--secondary-color);
-        color: var (--text-dark);
-    }
+        .controls .material-icons {
+            margin-right: 8px;
+        }
 
-    body.dark-mode #theme-toggle .material-icons {
-        color: var(--text-dark);
-        transform: rotate(360deg);
-    }
-</style>
+        body.dark-mode {
+            background-color: var(--background-dark);
+            color: var(--text-dark);
+        }
 
+        body.dark-mode header, body.dark-mode .footer {
+            background-color: var(--menu-footer-dark);
+            color: var(--text-dark);
+        }
+
+        body.dark-mode .menu nav ul li a {
+            background-color: var(--accent-dark-hover);
+            color: var(--text-dark);
+        }
+
+        body.dark-mode .menu nav ul li a:hover {
+            background-color: #ff8c56;
+        }
+
+        body.dark-mode .page-content {
+            background-color: var(--secondary-color);
+            color: var(--text-dark);
+        }
+
+        body.dark-mode #theme-toggle .material-icons {
+            color: var(--text-dark);
+            transform: rotate(360deg);
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -175,9 +207,11 @@
     <main>
         <div class="page-content">
             <h2>Onderzoek document</h2>
-            <iframe class="doc-viewer" src="https://csgnl-my.sharepoint.com/:w:/g/personal/155837_csgaugustinus_nl/ESUZslk4xtlPj_wGPvkWu9sBzMx7WMm4jOb-lrhTIY2TvQ?e=C65O8N" frameborder="0"></iframe>
+            <iframe class="doc-viewer" src="path/to/your/pdf/document.pdf" frameborder="0"></iframe>
             <div class="controls">
-                <button onclick="openFullscreen()">Fullscreen</button>
+                <button onclick="openFullscreen()">
+                    <span class="material-icons">fullscreen</span> Fullscreen
+                </button>
             </div>
         </div>
     </main>
