--- a/onderzoek.html
+++ b/onderzoek.html
@@ -207,7 +207,7 @@
     <main>
         <div class="page-content">
             <h2>Onderzoek document</h2>
-            <iframe class="doc-viewer" src="path/to/your/pdf/document.pdf" frameborder="0"></iframe>
+            <iframe class="doc-viewer" src="onderzoek ak website.pdf" frameborder="0"></iframe>
             <div class="controls">
                 <button onclick="openFullscreen()">
                     <span class="material-icons">fullscreen</span> Fullscreen
