--- a/onderzoek.html
+++ b/onderzoek.html
@@ -260,4 +260,5 @@
         }
     </script>
 </body>
+    <img src="https://www.bing.com/images/search?view=detailV2&ccid=N%2b0OMyeD&id=8BAC56A1BF1A8C9D40D498DD37DBDF8F1BEE93AC&thid=OIP.N-0OMyeDKTRP9rmyGfNWkgHaHk&mediaurl=https%3a%2f%2fwww.postactievenpxl.be%2fBreinstof%2fDeStandaard%2fDeAardeIsVierkant%2fAardeVierkant.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.37ed0e33278329344ff6b9b219f35692%3frik%3drJPuG4%252ff2zfdmA%26pid%3dImgRaw%26r%3d0&exph=511&expw=500&q=aarde&simid=608050898966038482&FORM=IRPRST&ck=29B1F7F7B6A7E3BED427F9D2ABE0A75D&selectedIndex=23&itb=0&ajaxhist=0&ajaxserp=0" alt="alternatieve_tekst">
 </html>
