--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
     :root {
-        --primary-color: #ffb4b4;
+        --primary-color: #4A412A;
         --secondary-color: #477a75;
         --background-light: #FFFFFF;
         --background-dark: #000000;
