--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -11,7 +11,7 @@
         --secondary-color: #477a75;
         --background-light: #FFFFFF;
         --background-dark: #000000;
-        --text-light: #Ffffff;
+        --text-light: #FF0000;
         --text-dark: #ffffff;
         --menu-footer-light: #444444;
         --menu-footer-dark: #333333;
