--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -9,7 +9,7 @@
     :root {
         --primary-color: #FFBF00;
         --secondary-color: #654321;
-        --background-light: #FFFFFF;
+        --background-light: #654321;
         --background-dark: #000000;
         --text-light: #000000;
         --text-dark: #ffffff;
