--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -8,7 +8,7 @@
 <style>
     :root {
         --primary-color: #FFBF00;
-        --secondary-color: #654321;
+        --secondary-color: #477a75;
         --background-light: #654321;
         --background-dark: #000000;
         --text-light: #000000;
