--- a/voor-en-na-delen.html
+++ b/voor-en-na-delen.html
@@ -9,7 +9,7 @@
     :root {
         --primary-color: #90EE90;
         --secondary-color: #477a75;
-        --background-light: #FFFFFF;
+        --background-light: #C8A2C8;
         --background-dark: #000000;
         --text-light: #000000;
         --text-dark: #ffffff;
