--- a/onderzoek.html
+++ b/onderzoek.html
@@ -9,7 +9,7 @@
         :root {
             --primary-color: #801818;
             --secondary-color: #477a75;
-            --background-light: #FFFFFF;
+            --background-light: #FFD700;
             --background-dark: #000000;
             --text-light: #000000;
             --text-dark: #ffffff;
