--- a/onderzoek.html
+++ b/onderzoek.html
@@ -8,7 +8,7 @@
     <style>
         :root {
             --primary-color: #AEC6CF;
-            --secondary-color: #477a75;
+            --secondary-color: #AEC6CF;
             --background-light: #FFD700;
             --background-dark: #000000;
             --text-light: #000000;
