--- a/onderzoek.html
+++ b/onderzoek.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #AEC6CF;
+            --primary-color: #90EE90;
             --secondary-color: #AEC6CF;
             --background-light: #FFD700;
             --background-dark: #000000;
