--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root {
         --primary-color: #800080;
         --secondary-color: #477a75;
-        --background-light: #FF0000;
+        --background-light: #ACE1AF;
         --background-dark: #000000;
         --text-light: #FFFFFF;
         --text-dark: #ffffff;
