--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         --secondary-color: #477a75;
         --background-light: #ACE1AF;
         --background-dark: #000000;
-        --text-light: #FFFFFF;
+        --text-light: #556B2F;
         --text-dark: #ffffff;
         --menu-footer-light: #444444;
         --menu-footer-dark: #333333;
