--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
     :root {
-        --primary-color: #800080;
+        --primary-color: #FF0000;
         --secondary-color: #477a75;
-        --background-light: #ACE1AF;
+        --background-light: #800080;
         --background-dark: #000000;
         --text-light: #556B2F;
         --text-dark: #ffffff;
