--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -7,11 +7,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
     :root {
-        --primary-color: #4A412A;
+        --primary-color: #90EE90;
         --secondary-color: #477a75;
-        --background-light: #FFFFFF;
+        --background-light: #AEC6CF;
         --background-dark: #000000;
-        --text-light: #FF0000;
+        --text-light: #000000;
         --text-dark: #ffffff;
         --menu-footer-light: #444444;
         --menu-footer-dark: #333333;
