--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
     :root {
-        --primary-color: #FFBF00;
+        --primary-color: #90EE90;
         --secondary-color: #477a75;
-        --background-light: #Ffffed;
+        --background-light: #AEC6CF;
         --background-dark: #000000;
         --text-light: #000000;
         --text-dark: #ffffff;
