--- a/onderzoek.html
+++ b/onderzoek.html
@@ -9,7 +9,7 @@
         :root {
             --primary-color: #90EE90;
             --secondary-color: #477a75;
-            --background-light: #AEC6CF;
+            --background-light: #2E56CF;
             --background-dark: #000000;
             --text-light: #000000;
             --text-dark: #ffffff;
