--- a/onderzoek.html
+++ b/onderzoek.html
@@ -6,17 +6,17 @@
     <title>Onderzoek | De EU</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
-        :root {
-            --primary-color: #90EE90;
-            --secondary-color: #477a75;
-            --background-light: #2E56CF;
-            --background-dark: #000000;
-            --text-light: #000000;
-            --text-dark: #ffffff;
-            --menu-footer-light: #444444;
-            --menu-footer-dark: #333333;
-            --accent-dark-hover: #018786;
-        }
+    :root {
+        --primary-color: #90EE90;
+        --secondary-color: #477a75;
+        --background-light: #AEC6CF;
+        --background-dark: #000000;
+        --text-light: #000000;
+        --text-dark: #ffffff;
+        --menu-footer-light: #444444;
+        --menu-footer-dark: #333333;
+        --accent-dark-hover: #018786;
+    }
 
         body {
             font-family: "Roboto", sans-serif;
