--- a/geschiedenis.html
+++ b/geschiedenis.html
@@ -29,6 +29,7 @@
         flex-direction: column;
         min-height: 100vh;
         overflow-x: hidden; /* Ensure no horizontal overflow */
+        padding-top: 80px; /* Adjust this value based on the height of your header */
     }
 
     header {
@@ -42,6 +43,19 @@
         border-radius: 0;
         width: 100%; /* Ensure header takes full width */
         box-sizing: border-box; /* Include padding and border in element's width and height */
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+        border-radius: 0 0 15px 15px;
+    }
+
+    header.scrolled {
+        background-color: var(--menu-footer-dark);
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        transform: translateY(-10px);
     }
 
     .header-title {
@@ -70,7 +84,7 @@
         text-decoration: none;
         transition: transform 0.3s, background-color 0.3s;
         padding: 10px 20px;
-        border-radius: 50px;
+        border-radius: 25px; /* More rounded corners for menu items */
         background-color: #666666;
         display: inline-block;
     }
@@ -188,6 +202,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             const themeToggle = document.getElementById('theme-toggle');
             const icon = themeToggle.querySelector('.material-icons');
+            const header = document.querySelector('header');
 
             themeToggle.addEventListener('click', () => {
                 document.body.classList.toggle('dark-mode');
@@ -196,6 +211,14 @@
                     icon.textContent = 'dark_mode';
                 } else {
                     icon.textContent = 'light_mode';
+                }
+            });
+
+            window.addEventListener('scroll', () => {
+                if (window.scrollY > 50) {
+                    header.classList.add('scrolled');
+                } else {
+                    header.classList.remove('scrolled');
                 }
             });
         });
