--- a/voor-en-na-delen.html
+++ b/voor-en-na-delen.html
@@ -11,7 +11,7 @@
         --secondary-color: #477a75;
         --background-light: #AEC6CF;
         --background-dark: #000000;
-        --text-light: #305000;
+        --text-light: #000000;
         --text-dark: #ffffff;
         --menu-footer-light: #444444;
         --menu-footer-dark: #333333;
@@ -29,6 +29,7 @@
         flex-direction: column;
         min-height: 100vh;
         overflow-x: hidden; /* Ensure no horizontal overflow */
+        padding-top: 80px; /* Adjust this value based on the height of your header */
     }
 
     header {
@@ -42,6 +43,19 @@
         border-radius: 0;
         width: 100%; /* Ensure header takes full width */
         box-sizing: border-box; /* Include padding and border in element's width and height */
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+        border-radius: 0 0 15px 15px;
+    }
+
+    header.scrolled {
+        background-color: var(--menu-footer-dark);
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        transform: translateY(-10px);
     }
 
     .header-title {
@@ -70,7 +84,7 @@
         text-decoration: none;
         transition: transform 0.3s, background-color 0.3s;
         padding: 10px 20px;
-        border-radius: 5px;
+        border-radius: 25px; /* More rounded corners for menu items */
         background-color: #666666;
         display: inline-block;
     }
@@ -89,7 +103,7 @@
     }
 
     #theme-toggle .material-icons {
-        transition: transform 0.3s, color 0.3s;
+        transition: transform 1s, color 1s;
     }
 
     main {
@@ -107,7 +121,7 @@
         margin: 0 auto;
         background-color: var(--primary-color);
         padding: 20px;
-        border-radius: 5px;
+        border-radius: 15px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         box-sizing: border-box; /* Include padding and border in element's width and height */
     }
