--- a/voorspelling-toekomst.html
+++ b/voorspelling-toekomst.html
@@ -211,6 +211,7 @@ Ik denk dat het twee kanten op kan gaan met de directie van de EU en als de goed
         document.addEventListener('DOMContentLoaded', () => {
             const themeToggle = document.getElementById('theme-toggle');
             const icon = themeToggle.querySelector('.material-icons');
+            const header = document.querySelector('header');
 
             themeToggle.addEventListener('click', () => {
                 document.body.classList.toggle('dark-mode');
@@ -219,6 +220,14 @@ Ik denk dat het twee kanten op kan gaan met de directie van de EU en als de goed
                     icon.textContent = 'dark_mode';
                 } else {
                     icon.textContent = 'light_mode';
+                }
+            });
+
+            window.addEventListener('scroll', () => {
+                if (window.scrollY > 50) {
+                    header.classList.add('scrolled');
+                } else {
+                    header.classList.remove('scrolled');
                 }
             });
         });
