--- a/onderzoek.html
+++ b/onderzoek.html
@@ -142,6 +142,7 @@
             height: 600px;
             border: none;
             margin-bottom: 20px;
+            border-radius: 15px;
         }
 
         .controls {
