--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             <h2>De Europese Unie</h2>
             <p>De website voor AK over de EU door Mikey, Ruben en Lasse</p>
             <a href="https://155601-mikey.github.io/Project-EU-webste-PO-Mikey-Ruben-en-Lasse/geschiedenis.html" style="position: page-content; bottom: 10px; right: 10px; color: #0078d7; text-decoration: none;">Volgende pagine (geschiedenis)</a><br>
-            <img src="C:\Users\Mikey\Downloads\school dinges AK\policies01-c_istock-kamisoka.png" alt="Image 1">
-            <img src="C:\Users\Mikey\Downloads\school dinges AK\EU-map_flag.png" alt="Image 2">
+            <img src="policies01-c_istock-kamisoka.png" alt="Image 1">
+            <img src="EU-map_flag.png" alt="Image 2">
         </div>
     </main>
     <div class="footer">
