--- a/404.html
+++ b/404.html
@@ -49,6 +49,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Niet gevonden!</title>
+    <link rel="icon" type="image/x-icon" href="404-error-512.ico">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
