--- a/mariokart.html
+++ b/mariokart.html
@@ -56,8 +56,8 @@ background: rgba(0, 128, 0, 0.3)
     Your browser does not support the audio element.
     </audio>
         <div class="message-box">
-            <h1>Bijna gelukt!</h1>
-            <p>We zijn nog bezig met deze pagina, maar als je later terug komt is die misschien wel klaar!</p>
+            <h1>Hallo!</h1>
+            <p>Tututudududutududu!</p>
         </div>
     </div>
 </body>
